Fixed spacing of lists

--- a/source/stylesheets/pages/_blog.scss
+++ b/source/stylesheets/pages/_blog.scss
@@ -64,7 +64,6 @@ pre {
 
   li {
     color: $blog-text-color;
-    padding-bottom: 4px;
   }
 
   .image-title h1 a {
